# CMakeExamples

./: .gitignore  README.md  cmakecommands.txt
exe/src/: CMakeLists.txt  tests.cpp
lib/: buildme.bat
lib/src/: CMakeLists.txt  algorithm.cpp  algorithm.h  collector.cpp  collector.h  engine.cpp  engine.h  functions.cpp  functions.h  myapp.cpp  ui.cpp  ui.h
